@@ -1,0 +1,16 @@
+DKIM-Signature: v=1; a=rsa-sha1; c=simple; d=messiah.edu; h=from:to:subject:date:message-id; q=dns/txt; s=selector1; x=1193229946; bh=ige3XiTAsWMkmHv+s6ZBSIbLNNc=; b=mRpAeHLMjhsluDZZpF+snljReZUX/MSFv9XShzGVo4wryMSvc5QEh/YtYwWmvm1gEwTgXbmhMgTmQuIIOggcQwlPurJSkz8Abx4HaHlhtFBIzAhc/R5Dfvh+Ni/tCPCqkOMiyE7yQjXBraxgZ9DpyFGf8JYZLDu1o6pz7hqeZcE=
+Received: from x.y.test
+   by example.net
+   via TCP
+   with ESMTP
+   id ABC12345
+   for <mary@example.net>;  21 Nov 1997 10:05:43 -0600
+Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
+From: Jason Long <jlong@messiah.edu>
+To: Nobody <nobody@messiah.edu>
+Subject: dkim test (ignore_7)
+Date: Wed, 7 Dec 2005 09:11:00 -0500
+Message-ID: <20051207091100@test.messiah.edu>
+
+Ignore this signature, it is expired.
+
